# localdata

./: .tmuxinator.yml  app.py  build_and_run.sh  localdata.py  pyproject.toml
templates/: index.html  update-data.html
