[tool.poetry]
name = "tmp-klzgaxnhtg"
version = "0.1.0"
description = ""
authors = ["Donghee Park <dongheepark@gmail.com>"]
readme = "README.md"
packages = [{include = "tmp"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
